[metadata]
name = pepubot
version = 0.1.0
description = Friday Bottle Lottery Bot for Slack
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = pepu, bot, Friday, bottle, lottery, Slack
url = https://github.com/andersinno/pepubot/
author = Tuomas Suutari
author_email = tuomas.suutari@anders.fi
maintainer = Anders Innovations
maintainer_email = support@anders.fi
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat
    Typing :: Typed

[options]
include_package_data = True
packages = find:
install_requires =
    aiofiles
    python-dateutil
    pytz
    slackclient[optional]
zip_safe = False

[options.entry_points]
console_scripts =
    pepubot = pepubot.__main__:main

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv

[flake8]
exclude = .tox,dist,venv
max-complexity = 10

[isort]

[mypy-setuptools]
ignore_missing_imports = True

[mypy-slack]
ignore_missing_imports = True

[mypy-aiofiles]
ignore_missing_imports = True
